data/derived/fa15/progs/unify/prog0281.ml.out
Characters 22-23:
  let _ = sepConcat "" [1;2;3;4];;
                        ^
Error: This expression has type int but an expression was expected of type
         string
